# neo-processing

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SECURITY.md  build_and_distribute.bat  build_and_run.bat  build_and_run.sh
.github/workflows/: build.yml
docs/proposals/: layer-system.md  sound-section.md
icons/: app.rc
outputs/: 2026-05-12-14-43-34_p5.js  2026-05-12-14-43-48_p5.js  2026-05-12-18-24-40_p5.js  2026-05-12-18-24-47_p5.js  README.md
public/: index.html  libraries.json  script.js  style.css
public/libs/: p5-1.11.3.min.js  theme-textmate-css.js
samples/: test-import-lib.js
src/: main.cpp
